<resources>
    <string name="app_name">ShareIt</string>

    <string name="drawer_common_logout_title">Logout</string>

    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_neutral_button_text">OK</string>

    <string name="fragment_auth_header_logo_text">Share It.</string>
    <string name="fragment_auth_email_input_hint_text">Email</string>
    <string name="fragment_auth_password_input_hint_text">Password</string>
    <string name="fragment_auth_sign_in_button_text">Sign In</string>
    <string name="fragment_auth_sign_up_button_text">Sign Up</string>

    <string name="fragment_idea_list_label">Recent ideas</string>
    <string name="fragment_idea_list_idea_created_snackbar_text">Idea has been created!</string>
    <string name="fragment_idea_list_shared_idea_transition_name">sharedIdea</string>

    <string name="fragment_idea_details_label">Idea details</string>

    <string name="fragment_idea_create_label">New idea</string>
    <string name="fragment_idea_create_save_button_text">Save</string>
    <string name="fragment_idea_create_cancel_button_text">Cancel</string>
    <string name="fragment_idea_create_title_input_hint">Title</string>
    <string name="fragment_idea_create_content_input_hint">Content</string>

</resources>