<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/fragment_idea_create_topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.Material3.AppBarLayout">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/fragment_idea_create_topbar_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/topbar_idea_list"
            tools:title="Recent Ideas"/>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/fragment_idea_create_topbar_progress_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:indeterminate="true"
            tools:progress="50"/>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_idea_create_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_idea_create_topbar"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_idea_create_title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:hint="@string/fragment_idea_create_title_input_hint"
            android:lines="1"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_idea_create_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_idea_create_title"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_idea_create_content_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:hint="@string/fragment_idea_create_content_input_hint"
            android:maxLines="5"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_idea_create_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/fragment_idea_create_save_button_text"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_idea_create_cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/fragment_idea_create_save_button"
        app:layout_constraintEnd_toStartOf="@id/fragment_idea_create_save_button"
        android:layout_marginEnd="16dp"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:text="@string/fragment_idea_create_cancel_button_text" />

</androidx.constraintlayout.widget.ConstraintLayout>